[metadata]
name = spetlr
author = Spetlr.Org
version = file: src/VERSION.txt
description = A python ETL libRary (SPETLR) for Databricks powered by Apache SPark.
long_description = file: README.md
long_description_content_type = text/markdown
author_email = spetlr.org@gmail.com
url = https://github.com/spetlr-org/spetlr
keywords = databricks, pyspark
license_files = LICENSE
project_urls =
    Documentation = https://github.com/spetlr-org/spetlr
    Bug Reports = https://github.com/spetlr-org/spetlr/issues
    Source Code = https://github.com/spetlr-org/spetlr
classifiers =
    # see https://pypi.org/classifiers/
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
package_dir =
	  =src
packages = find:
install_requires =
    pyyaml
    sqlparse>=0.4.4
    Deprecated
    pyodbc
    importlib-metadata
    azure-cosmos
    timezonefinder==6.0.2
    more_itertools
    pycountry
    databricks-sdk
    # Numpy does not support 3.8 if above 1.24
    numpy<=1.24;python_version<="3.8"
    numpy;python_version>"3.8"
    urllib3==1.26.16;python_version<="3.8" # follows numpy
    urllib3;python_version>"3.8" # follows numpy

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
	python3 = spetlr.alias:python3
  spetlr_task = spetlr.entry_points.generalized_task_entry_point:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203
per-file-ignores = __init__.py:F401
