[metadata]
name = spetlr
author = Spetlr.Org
version = file: src/VERSION.txt
description = A python ETL libRary (SPETLR) for Databricks powered by Apache SPark.
long_description = file: README.md
long_description_content_type = text/markdown
author_email = spetlr.org@gmail.com
url = https://github.com/spetlr-org/spetlr
keywords = databricks, pyspark
license_files = LICENSE
project_urls = 
	Documentation = https://github.com/spetlr-org/spetlr
	Bug Reports = https://github.com/spetlr-org/spetlr/issues
	Source Code = https://github.com/spetlr-org/spetlr
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Software Development :: Build Tools
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
package_dir = 
	=src
packages = find:
install_requires = 
	azure-core==1.30.0
	azure-cosmos==4.5.1
	cachetools==5.3.3
	certifi==2024.2.2
	cffi==1.16.0
	charset-normalizer==3.3.2
	cryptography==42.0.5
	databricks-sdk==0.20.0
	Deprecated==1.2.14
	google-auth==2.28.1
	h3==3.7.6
	idna==3.6
	importlib-metadata==7.0.1
	importlib-resources==5.13.0
	more-itertools==10.2.0
	msal==1.27.0
	numpy==1.24.0
	pandas==2.0.3
	pyasn1==0.5.1
	pyasn1-modules==0.3.0
	pycountry==23.12.11
	pycparser==2.21
	PyJWT==2.8.0
	pyodbc==5.1.0
	python-dateutil==2.8.2
	pytz==2024.1
	PyYAML==6.0.1
	requests==2.31.0
	rsa==4.9
	setuptools==49.2.1
	six==1.16.0
	sqlparse==0.4.4
	timezonefinder==6.0.2
	typing_extensions==4.10.0
	tzdata==2024.1
	urllib3==1.26.16
	wrapt==1.16.0
	zipp==3.17.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	python3 = spetlr.alias:python3
	spetlr_task = spetlr.entry_points.generalized_task_entry_point:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203
per-file-ignores = __init__.py:F401

